# Trading_Engine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
apps/: bench_main.cpp  replay_main.cpp  tests_main.cpp
grafana/: dashboard.json
include/: metrics.h  order_book.h  types.h
include/llx/book/: ladder_book.hpp
include/llx/core/: matching_engine.hpp  types.hpp
include/llx/memory/: object_pool.hpp
include/llx/metrics/: latency_histogram.hpp
include/llx/queue/: spsc_ring.hpp
include/llx/util/: affinity.hpp  time.hpp
k8s/: deployment.yaml  hpa.yaml
load_test/: locustfile.py
prometheus/: prometheus.yml
src/: main.cpp  order_book.cpp
src/book/: ladder_book.cpp
src/core/: matching_engine.cpp
